Favorites storing
+ fixed logging
+ fixed favorites creation