@@ -5,7 +5,7 @@
 
     <groupId>de.ostfale.va</groupId>
     <artifactId>badminton-vsb</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.2</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -79,19 +79,6 @@
             <version>3.1.0</version>
             <scope>compile</scope>
         </dependency>
-        <!-- Source: https://mvnrepository.com/artifact/org.eclipse.store/storage-restservice-springboot -->
-        <dependency>
-            <groupId>org.eclipse.store</groupId>
-            <artifactId>storage-restservice-springboot</artifactId>
-            <version>3.1.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.store</groupId>
-            <artifactId>storage-restservice</artifactId>
-            <version>3.1.0</version>
-        </dependency>
-
 
         <dependency>
             <groupId>net.logstash.logback</groupId>
@@ -133,6 +120,9 @@
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.time=ALL-UNNAMED
                     </jvmArguments>
+                    <environmentVariables>
+                        <JAVA_TOOL_OPTIONS>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED</JAVA_TOOL_OPTIONS>
+                    </environmentVariables>
                 </configuration>
                 <executions>
                     <execution>
@@ -184,6 +174,32 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>production</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.vaadin</groupId>
+                        <artifactId>vaadin-maven-plugin</artifactId>
+                        <version>${vaadin.version}</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>build-frontend</goal>
+                                </goals>
+                                <phase>compile</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <productionMode>true</productionMode>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <repositories>
         <repository>
